# cfs-notebooks

./: .gitignore  devenv.nix  pyproject.toml
cfs_notebooks/: scrambling.py
notebooks/: bacteria_impact.ipynb
