[project]
name = "cfs-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Piotr Kozakowski",email = "piotr@kozakow.ski"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "cvxpy (>=1.6.5,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"

